force-app/main/default/objects/Account/fields/Data_Population_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Population_Score__c</fullName>
    <formula>IF
(ISBLANK( Website )  = TRUE, 0, 25)
+
IF
(ISBLANK(  Phone )  = TRUE, 0, 25)
+
IF
(ISBLANK(TEXT(     Industry  ))  = TRUE, 0, 25)
+
IF
(NumberOfEmployees &gt; 0,25,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Population Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>