force-app/main/default/objects/Account/fields/IsClient__c.field-meta.xml
<CustomField>
    <fullName>IsClient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if the Account is also a client. Eg a shipbuilder with a commercial relationship with Burgess</inlineHelpText>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>