force-app/main/default/objects/Account/fields/NDA_Client__c.field-meta.xml
<CustomField>
    <fullName>NDA_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Client</label>
    <type>Checkbox</type>
</CustomField>