force-app/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising/Sales</fullName>
            </value>
            <value>
                <fullName>Affinity Partner</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>AVIT</fullName>
            </value>
            <value>
                <fullName>Bank/Financial</fullName>
            </value>
            <value>
                <fullName>Boat Show Supplier</fullName>
            </value>
            <value>
                <fullName>Burgess Account</fullName>
            </value>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Charter Brokers</fullName>
            </value>
            <value>
                <fullName>Charter Managers</fullName>
            </value>
            <value>
                <fullName>Classification Society</fullName>
            </value>
            <value>
                <fullName>Coatings Specialist</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computer Services</fullName>
            </value>
            <value>
                <fullName>Control Systems</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Crewing Agency</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Deck Supplies</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Engineering Supplies</fullName>
            </value>
            <value>
                <fullName>Engines</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Exterior Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>