force-app/main/default/objects/Account/recordTypes/Captain_and_crew.recordType-meta.xml
<RecordType>
    <fullName>Captain_and_crew</fullName>
    <active>true</active>
    <label>Captain and crew</label>
</RecordType>