force-app/main/default/objects/Account/recordTypes/Unknown.recordType-meta.xml
<RecordType>
    <fullName>Unknown</fullName>
    <active>true</active>
    <label>Unknown</label>
</RecordType>