force-app/main/default/objects/Account/listViews/All_Clients.listView-meta.xml
<ListView>
    <fullName>All_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_Status__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>Last_Modified_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client</value>
    </filters>
    <label>All client networks</label>
</ListView>