force-app/main/default/objects/Account/listViews/All_Companies.listView-meta.xml
<ListView>
    <fullName>All_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Account.Client</value>
    </filters>
    <label>All Companies</label>
</ListView>