force-app/main/default/objects/Account/listViews/All_Suppliers.listView-meta.xml
<ListView>
    <fullName>All_Suppliers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Department__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Brands__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Suppliers</value>
    </filters>
    <label>All Suppliers</label>
</ListView>