force-app/main/default/objects/Account/listViews/Marine_Safety.listView-meta.xml
<ListView>
    <fullName>Marine_Safety</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Brands__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Marine Safety</value>
    </filters>
    <label>Marine Safety</label>
</ListView>