force-app/main/default/objects/Account/listViews/Wind_Protection.listView-meta.xml
<ListView>
    <fullName>Wind_Protection</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Brands__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Wind Protection</value>
    </filters>
    <label>Wind Protection</label>
</ListView>